# defog

./: .gitignore  CMakeLists.txt
plan/: defog_design_spec.md
src/cli/: cli.cc  cli.h  main.cc
tests/: cli_dispatcher_test.cc
tests/gtest_compat/: gtest_main.cc
tests/gtest_compat/gtest/: gtest.h
